<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyToLearn</string>
    <string name="app_version">v1.0</string>
    <string name="alarm_title">闹钟设置</string>
    <string name="subjects_title">科目</string>
    <string name="wrong_browse_title">错题浏览</string>
    <string name="wrong_new_title">新建错题</string>
    <string name="wrong_modify_title">修改错题</string>
    <string name="wrong_list_title">错题</string>
    <string name="media_video_list_title">视频</string>
    <string name="media_recorder_list_title">音频</string>
    <string name="memo_browse_title">心得体会</string>
    <string name="memo_new_title">新建心得</string>
    <string name="memo_modify_title">修改心得</string>
    <string name="knowledge_list_title">知识点</string>
    <string name="button_main_frame">返回主菜单</string>
    <string name="button_back">返回</string>
    <string name="button_delete">删除</string>
    <string name="button_modify">修改</string>
    <string name="button_save">保存</string>
    <string name="button_add">添加</string>
    <string name="button_alarm_set">设置闹钟</string>
    <string name="button_alarm_cancel">取消闹钟</string>
    <string name="button_wrong_browse_mis">浏览错题</string>
    <string name="button_wrong_browse_ans">浏览答案</string>
    <string name="button_wrong_browse_note">错题心得</string>
    <string name="file_root">MySyllabus</string>
    <string name="file_learn_folder">学习心得</string>
    <string name="file_wrong_folder">错题整理</string>
    <string name="file_media_folder">课堂笔记</string>
    <string name="file_media_video">录像</string>
    <string name="file_media_recorder">录音</string>
    <string name="file_wrong_misBmp">misBmp</string>
    <string name="file_wrong_ansBmp">ansBmp</string>
    <string name="file_wrong_temp">MySyllabusTemp</string>

</resources>