<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/panel_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/main_subjects_head"
        android:layout_width="fill_parent"
        android:layout_height="55sp"
        android:background="@drawable/bg_header"
        android:orientation="horizontal"
        android:paddingBottom="0sp"
        android:paddingLeft="8sp"
        android:paddingRight="8sp"
        android:paddingTop="0sp" >

        <Button
            android:id="@+id/main_subjects_back"
            style="@style/header_action_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingBottom="8sp"
            android:paddingLeft="12sp"
            android:paddingRight="12sp"
            android:paddingTop="8sp"
            android:text="@string/button_back" >
        </Button>

        <TextView
            android:id="@+id/main_subjects_head_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/subjects_title"
            android:textAppearance="@style/header_title" >
        </TextView>

        <Button
            android:id="@+id/main_subjects_add"
            style="@style/header_action_additional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingBottom="10sp"
            android:paddingLeft="12sp"
            android:paddingRight="12sp"
            android:paddingTop="10sp"
            android:text="@string/button_add" >
        </Button>
    </LinearLayout>

    <ListView
        android:id="@+id/main_subjects_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_header_corner_base"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@drawable/line_seperator"
        android:listSelector="@color/selector_list_item" >
    </ListView>

</LinearLayout>