<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/panel_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_frame"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/memo_browse_head"
        android:layout_width="fill_parent"
        android:layout_height="55sp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_header"
        android:orientation="horizontal"
        android:paddingBottom="0sp"
        android:paddingLeft="8sp"
        android:paddingRight="8sp"
        android:paddingTop="0sp" >

        <Button
            android:id="@+id/memo_browse_back"
            style="@style/header_action_back"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingBottom="8sp"
            android:paddingLeft="12sp"
            android:paddingRight="12sp"
            android:paddingTop="8sp"
            android:text="@string/button_back" >
        </Button>

        <TextView
            android:id="@+id/memo_browse_head_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.4"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/memo_browse_title"
            android:textAppearance="@style/header_title" >
        </TextView>

        <Button
            android:id="@+id/memo_browse_modify"
            style="@style/header_action_additional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="12sp"
            android:gravity="center"
            android:paddingBottom="10sp"
            android:paddingLeft="12sp"
            android:paddingRight="12sp"
            android:paddingTop="10sp"
            android:text="@string/button_modify" >
        </Button>

        <Button
            android:id="@+id/memo_browse_delete"
            style="@style/header_action_additional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingBottom="10sp"
            android:paddingLeft="12sp"
            android:paddingRight="12sp"
            android:paddingTop="10sp"
            android:text="@string/button_delete" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="标题"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/memo_browse_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="内容"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/memo_browse_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>